src/user.css
/* ... */
.marketplace-card--installed {
  border: 1px rgba(var(--spice-rgb-accent), 0.7) solid !important;
}

.main-tag-container {
  font-weight: 400;
  font-size: 10px;
  color: var(--spice-main) !important;
  background-color: var(--spice-accent);
}

.main-heroCardTag-root,
.main-heroCard-cardMetadata ._AxyaXOKl3GkvT212Vco {
  height: 24px;
  padding: 12px;
  margin-top: 8px;
}

.ZHE5oMCbrUVXtUWiPmpH {
  /* tags */
  padding: 12px !important;
}

.x-categoryCard-title,
.x-heroCategoryCard-heroTitle,
.collection-collectionEntityHeroCard-likedSongs div {
  color: var(--spice-alt-text);
}

/* transitions */

/* .main-card-card {
  transition: background-color 150ms ease;
} */

.main-card-card,
.x-categoryCard-CategoryCard,
.main-heroCard-card {
  transition: transform 400ms var(--ms-motion-timing-decelerate);
}

.link-subtle {
  transition-duration: 150ms;
}

/* headers */

[dir='ltr'] .queue-tabBar-header,
.marketplace-tabBar-nav {
  text-align: center !important;
}

.lyrics-tabBar-header {
  justify-content: center;
}

.Root__top-bar {
  position: absolute !important;
  width: 100vw !important;
  grid-area: none;
  z-index: 4 !important;
  background-color: rgba(var(--spice-rgb-sidebar), 0.85);
  backdrop-filter: blur(80px) saturate(2);
}

.main-topBar-container {
  padding-inline-end: 167px !important;
  overflow: hidden;
}

.main-entityHeader-withBackgroundImage {
  padding: 0 32px 24px;
  margin-top: 48px;
}

.main-entityHeader-title {
  font-size: unset;
  font-weight: 500;
  display: contents;
}

.main-entityHeader-titleInner {
  overflow: hidden;
}

h1,
h2,
h3,
.main-shelf-title,
.main-entityHeader-topbarTitle,
.main-type-canon,
.main-type-bass,
.main-cardHeader-text.main-type-alto,
.x-searchResultsTracks-title {
  font-weight: 500;
  letter-spacing: 0.1px !important;
  margin-bottom: 4px;
  white-space: normal;
}

.main-seeAll-link {
  margin-bottom: 10px;
}

.main-topBar-topbarContent {
  justify-content: center;
}

.queue-tabBar-header {
  text-align: center;
  min-width: 100px;
}

.queue-tabBar-headerItemLink {
  transition: background-color ease-out 167ms;
}

.main-topBar-historyButtons {
  align-items: center;
}

.main-topBar-historyButtons button:nth-child(1) {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_arrow_left_24_filled.svg');
  margin-left: 60px;
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
}

.main-topBar-historyButtons button:nth-child(2) {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_arrow_right_24_filled.svg');
  background-color: var(--spice-text) !important;
  padding: 5px;
  width: 24px !important;
  height: 24px !important;
  margin-right: 13px;
}

.main-userWidget-displayName,
.main-userWidget-chevron {
  display: none !important;
}

/* menus */

div#context-menu:before,
.main-contextMenu-menu:before {
  content: '';
  z-index: -1;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: var(--border-radius-1);
  backdrop-filter: blur(25px) saturate(1.5);
}

.main-contextMenu-menu,
.main-contextMenu-tippy {
  background-color: rgba(var(--spice-rgb-card), 0.8) !important;
}

.main-contextMenu-filterPlaylistSearchContainer {
  height: auto;
}

.main-contextMenu-menuItemButton,
.main-userWidget-dropDownMenuItemButton {
  border-radius: var(--border-radius-3);
  color: var(--spice-text) !important;
  height: 32px;
  padding-left: 8px;
}

.main-contextMenu-menuItemButton:hover,
.main-userWidget-dropDownMenuItemButton:hover,
.main-contextMenu-menuItemButton[aria-expanded='true'] {
  background-color: rgba(var(--spice-rgb-text), 0.1) !important;
  backdrop-filter: luminosity;
}

.main-contextMenu-menuItem,
._60cb742e518d084c3c959007b9463b51-scss > li {
  margin: 1px 1px;
}

.main-contextMenu-menuItem:first-child,
._60cb742e518d084c3c959007b9463b51-scss > :first-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menuItem:last-child {
  margin: 1px 1px 1px;
}

._60cb742e518d084c3c959007b9463b51-scss > :last-child {
  margin: 1px 1px 1px;
}

.main-contextMenu-menu,
._60cb742e518d084c3c959007b9463b51-scss {
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-layer-shadow);
  background-color: var(--spice-card);
}

.queue-tabBar-dropdownItemLink {
  color: var(--spice-text) !important;
}

/* buttons */

.main-genericButton-buttonActive:after {
  background-color: var(--spice-accent) !important;
}

.main-genericButton-buttonActive {
  color: var(--spice-accent) !important;
}

.ButtonInner-md {
  width: auto;
  padding: 10px;
}

.x-downloadButton-button,
.x-filterBox-expandButton,
.x-contributorButton-ContributorButton,
.x-filterBox-clearButton {
  color: var(--spice-subtext) !important;
}

.main-topBar-button,
.IAyWaeDamLJLjxuPeVKw {
  background-color: var(--spice-selected-row) !important;
}

.IAyWaeDamLJLjxuPeVKw {
  color: var(--spice-text) !important;
}

.icon,
.main-navBar-icon {
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
  margin: auto;
  display: block;
}

.main-addButton-active:focus,
.main-addButton-active:hover,
.main-addButton-active {
  color: var(--spice-accent) !important;
}

.main-navBar-navBarLink .main-navBar-icon path,
.icon > svg,
.x-searchInput-searchInputIconContainer path,
.show-episodeBlock-playerActions svg,
.main-playButton-PlayButton polygon,
.main-playButton-PlayButton rect {
  display: none !important;
}

.home-icon {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_home_24_regular.svg');
  background-color: var(--spice-subtext) !important;
}

.home-active-icon {
  -webkit-mask-image: url('https://cdn.jsdelivr.net/gh/nimsandu/spicetify-bloom@master/assets/fluentui-system-icons/ic_fluent_home_24_filled.svg');
  background-color: var(--spice-accent) !important;
}
/* ... */

